--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
     <link href="./style.css" rel="stylesheet">
 </head>
 <body>
-    <script src="./jscript.js"></script>
     <div class="outercase">
-        <div class="display"></div>
+        <div class="display">
+        </div>
         <div class="keysHolder">
-            <button id="zero">0</button>
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="substract">-</button>
-            <button id="seven">7</button>
-            <button id="eight">8</button>
-            <button id="nine">9</button>
-            <button id="add">+</button>
+            <button id="0" class="number">0</button>
+            <button id="1" class="number">1</button>
+            <button id="2" class="number">2</button>
+            <button id="3" class="number">3</button>
+            <button id="4" class="number">4</button>
+            <button id="5" class="number">5</button>
+            <button id="6" class="number">6</button>
+            <button id="subtract" class="operator">-</button>
+            <button id="7" class="number">7</button>
+            <button id="8" class="number">8</button>
+            <button id="9" class="number">9</button>
+            <button id="add" class="operator">+</button>
             <button id="backspace">C</button>
             <button id="clear">CE</button>
             <button id="decimal">,</button>
             <button id="equal">=</button>
-            <button id="multiply">X</button>
-            <button id="divide">/</button>
+            <button id="multiply" class="operator">X</button>
+            <button id="divide" class="operator">/</button>
             
             
         </div>
     </div>
+
+    <script src="./jscript.js"></script>
 </body>
 </html>
