erase forEach functions and selectqueryall, and replace them for functions and inline events

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
         <div class="display">
         </div>
         <div class="keysHolder">
-            <button id="0" class="number">0</button>
-            <button id="1" class="number">1</button>
-            <button id="2" class="number">2</button>
-            <button id="3" class="number">3</button>
-            <button id="4" class="number">4</button>
-            <button id="5" class="number">5</button>
-            <button id="6" class="number">6</button>
-            <button id="subtract" class="operator">-</button>
-            <button id="7" class="number">7</button>
-            <button id="8" class="number">8</button>
-            <button id="9" class="number">9</button>
-            <button id="add" class="operator">+</button>
+            <button id="0" class="number" onclick='assignNumber(this.id)'>0</button>
+            <button id="1" class="number" onclick='assignNumber(this.id)'>1</button>
+            <button id="2" class="number" onclick='assignNumber(this.id)'>2</button>
+            <button id="3" class="number" onclick='assignNumber(this.id)'>3</button>
+            <button id="4" class="number" onclick='assignNumber(this.id)'>4</button>
+            <button id="5" class="number" onclick='assignNumber(this.id)'>5</button>
+            <button id="6" class="number" onclick='assignNumber(this.id)'>6</button>
+            <button id="subtract" class="operator" onclick="assignOperator(this.id)">-</button>
+            <button id="7" class="number" onclick='assignNumber(this.id)'>7</button>
+            <button id="8" class="number" onclick='assignNumber(this.id)'>8</button>
+            <button id="9" class="number" onclick='assignNumber(this.id)'>9</button>
+            <button id="add" class="operator" onclick="assignOperator(this.id)">+</button>
             <button id="backspace">C</button>
             <button id="clear">CE</button>
             <button id="decimal">,</button>
             <button id="equal">=</button>
-            <button id="multiply" class="operator">X</button>
-            <button id="divide" class="operator">/</button>
+            <button id="multiply" class="operator" onclick="assignOperator(this.id)">X</button>
+            <button id="divide" class="operator" onclick="assignOperator(this.id)">/</button>
             
             
         </div>
